Working on movie recommender using Spark

--- a/movie-ratings-counter.ipynb
+++ b/movie-ratings-counter.ipynb
@@ -45,6 +45,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Part 2: What are the most popular movies?\n",
+    "\n",
+    "We're going to figure out which movies are the most popular."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
