Working on movie recommender using Spark

--- a/movie-ratings-counter.ipynb
+++ b/movie-ratings-counter.ipynb
@@ -57,6 +57,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-3-bc1df754c17f>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-bc1df754c17f>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    flipped = movieCounts.map( lambda (x, y) : (y, x) )\u001b[0m\n\u001b[0m                                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "movies = lines.map(lambda x: (int(x.split()[1]), 1))\n",
+    "movieCounts = movies.reduceByKey(lambda x, y: x + y)\n",
+    "\n",
+    "flipped = movieCounts.map( lambda (x, y) : (y, x) )\n",
+    "sortedMovies = flipped.sortByKey()\n",
+    "\n",
+    "results = sortedMovies.collect()\n",
+    "\n",
+    "for result in results:\n",
+    "    print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
