Need to fix flipping part

--- a/Who's the most popular superhero?/Most-Popular-Superhero.ipynb
+++ b/Who's the most popular superhero?/Most-Popular-Superhero.ipynb
@@ -10,8 +10,52 @@
     "\n",
     "We'll be using two different files: \n",
     "\n",
-    "* Marvel-graph.txt: each line contains firstly the superhero's ID and then all the superheros he/she has appeared with in other comic books\n",
-    "* Marvel-names.txt: contains the ID and name of every superhero."
+    "* Marvel-Graph.txt: each line contains firstly the superhero's ID and then all the superheros he/she has appeared with in other comic books\n",
+    "* Marvel-Names.txt: contains the ID and name of every superhero."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'x' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-62c02f12dfae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0mtotalFriendsByCharacter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpairings\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreduceByKey\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0mflipped\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtotalFriendsByCharacter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0mmostPopularHeroID\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mflipped\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'x' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "def countCoOccurences(line):\n",
+    "    elements = line.split()\n",
+    "    return (int(elements[0]), len(elements) - 1)\n",
+    "\n",
+    "def parseNames(line):\n",
+    "    fields = line.split('\\\"')\n",
+    "    return (int(fields[0]), fields[1].encode(\"utf8\"))\n",
+    "    \n",
+    "\n",
+    "names = sc.textFile('/Users/jacquesthibodeau/big-data-datasets/Marvel-Names.txt')\n",
+    "namesRDD = names.map(parseNames)\n",
+    "\n",
+    "lines = sc.textFile('/Users/jacquesthibodeau/big-data-datasets/Marvel-Graph.txt')\n",
+    "pairings = lines.map(countCoOccurences)\n",
+    "\n",
+    "totalFriendsByCharacter = pairings.reduceByKey(lambda x, y : x + y)\n",
+    "flipped = totalFriendsByCharacter.map(lambda x: x[1], x[0])\n",
+    "\n",
+    "mostPopularHeroID = flipped.max()\n",
+    "\n",
+    "mostPopularHeroName = namesRDD.lookup(mostPopularHeroID[1])[0]\n",
+    "\n",
+    "print(mostPopularHeroName + \" is the most popular superhero, with \" + \\\n",
+    "     str(mostPopularHeroID[0]) + \" co-appearances.\")"
    ]
   },
   {
@@ -21,13 +65,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "def parseLine(line):\n",
-    "    \n",
-    "\n",
-    "lines = sc.textFile('')\n",
-    "rdd = lines.map(parseLine)\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -35,18 +73,6 @@
    "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.3"
   }
  },
  "nbformat": 4,
