--- a/Who's the most popular superhero?/Most-Popular-Superhero.ipynb
+++ b/Who's the most popular superhero?/Most-Popular-Superhero.ipynb
@@ -62,7 +62,9 @@
     "\n",
     "---\n",
     "\n",
-    "Now, we will use Breadth First Search (BFS) in order to figure out the degrees of seperation between superheroes."
+    "Now, we will use Breadth First Search (BFS) in order to figure out the degrees of seperation between superheroes.\n",
+    "\n",
+    "The point of the following section is to know when to use Spark to solve problems that aren't obviously a Spark problem. With creativity, you can take more complicated problems and frame them as a Spark problem in order to "
    ]
   },
   {
@@ -133,13 +135,15 @@
     "def bfsReduce(data1, data2):\n",
     "    \n",
     "\n",
+    "iterationRDD = createStartingRDD()    \n",
+    "    \n",
     "for iteration in range(0, 10):\n",
     "    print(\"Running BFS iteration# \" + str(iteration+1))\n",
     "    \n",
     "    # Create new vertices as needed to darken or reduce distances in the\n",
     "    # reduce stage. If we encounter the node we're looking for as a GRAY\n",
     "    # node, increment our accumulator to signal that we're done.\n",
-    "    mapped = flatMap(bfsMap)\n",
+    "    mapped = iterationRDD.flatMap(bfsMap)\n",
     "    \n",
     "    # Note that mapped.count() action here forces the RDD to be evaluated, \n",
     "    # and that's the only reason out accumulator is actually updated.\n",
