--- a/Who's the most popular superhero?/Most-Popular-Superhero.ipynb
+++ b/Who's the most popular superhero?/Most-Popular-Superhero.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Who's the most popular superhero?\n",
     "\n",
-    "When I say 'popular', I don't mean popular among comic readers. What we are defining as popularity is that how many times a certain character appears in another superhero's comic. We'll imagine that if, for example, spiderman appears in a comic with Captain America, that means they are friends. So, the superhero with the most friends (appears with the most other superheroes) will be considered the most 'popular'.\n",
+    "When I say 'popular', I don't mean popular among comic readers. What we are defining as popularity is that how many times a certain superhero appears in another superhero's comic. We'll imagine that if, for example, spiderman appears in a comic with Captain America, that means they are friends. So, the superhero with the most friends (appears with the most other superheroes) will be considered the most 'popular'.\n",
     "\n",
     "We'll be using two different files: \n",
     "\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -43,8 +43,8 @@
     "lines = sc.textFile('/Users/jacquesthibodeau/big-data-datasets/Marvel-Graph.txt')\n",
     "pairings = lines.map(countCoOccurences)\n",
     "\n",
-    "totalFriendsByCharacter = pairings.reduceByKey(lambda x, y : x + y)\n",
-    "flipped = totalFriendsByCharacter.map(lambda x : (x[1], x[0]))\n",
+    "totalFriendsBySuperhero = pairings.reduceByKey(lambda x, y : x + y)\n",
+    "flipped = totalFriendsBySuperhero.map(lambda x : (x[1], x[0]))\n",
     "\n",
     "mostPopularHeroID = flipped.max()\n",
     "\n",
@@ -64,20 +64,30 @@
     "\n",
     "Now, we will use Breadth First Search (BFS) in order to figure out the degrees of seperation between superheroes.\n",
     "\n",
-    "The point of the following section is to know when to use Spark to solve problems that aren't obviously a Spark problem. With creativity, you can take more complicated problems and frame them as a Spark problem in order to "
+    "The point of the following section is to know when to use Spark to solve problems that aren't obviously a Spark problem. With creativity, you can take more complicated problems and frame them as a Spark problem in order to take advantage of Spark's benefits with big data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running BFS iteration #1\n",
+      "Processing 8330 values.\n",
+      "Running BFS iteration #2\n",
+      "Processing 220615 values.\n",
+      "Hit the target superhero! From 2 different direction(s)\n"
+     ]
+    }
+   ],
    "source": [
-    "# The characters we wish to find the degree of seperation between:\n",
-    "startCharacterID = 5306\n",
-    "targetCharacterID = 14\n",
+    "# The superheroes we wish to find the degree of seperation between:\n",
+    "startSuperheroID = 5306 # Spiderman\n",
+    "targetSuperheroID = 3006 # Jinx\n",
     "\n",
     "# We use what is called an accumulator. It signals us when we have\n",
     "# found the target we are looking for during out BFS traversal.\n",
@@ -105,7 +115,7 @@
     "    return inputFile.map(convertToBFS)\n",
     "\n",
     "def bfsMap(node):\n",
-    "    characterID = node[0]\n",
+    "    superheroID = node[0]\n",
     "    data = node[1]\n",
     "    connections = data[0]\n",
     "    distance = data[1]\n",
@@ -116,29 +126,67 @@
     "    # If this node needs to be expanded...\n",
     "    if (color == 'GRAY'):\n",
     "        for connection in connections:\n",
-    "            newCharacterID = connection\n",
+    "            newSuperheroID = connection\n",
     "            newDistance = distance + 1\n",
     "            newColor = 'GRAY'\n",
-    "            if (targetCharacterID == connection):\n",
+    "            if (targetSuperheroID == connection):\n",
     "                hitCounter.add(1)\n",
     "                \n",
-    "            newEntry = (newCharacterID, ([], newDistance, newColor))\n",
+    "            newEntry = (newSuperheroID, ([], newDistance, newColor))\n",
     "            results.append(newEntry)\n",
     "            \n",
     "        # We've processed this node, so we color it black\n",
     "        color = 'BLACK'\n",
     "        \n",
     "    # Emit the input node so we don't lost it.\n",
-    "    results.append(characterID, (connections, distance, color))\n",
+    "    results.append( (superheroID, (connections, distance, color)) )\n",
     "    return results\n",
     "\n",
     "def bfsReduce(data1, data2):\n",
-    "    \n",
+    "    edges1 = data1[0]\n",
+    "    edges2 = data2[0]\n",
+    "    distance1 = data1[1]\n",
+    "    distance2 = data2[1]\n",
+    "    color1 = data1[2]\n",
+    "    color2 = data2[2]\n",
     "\n",
+    "    distance = 9999\n",
+    "    color = color1\n",
+    "    edges = []\n",
+    "\n",
+    "    # See if one is the original node with its connections.\n",
+    "    # If so preserve them.\n",
+    "    if (len(edges1) > 0):\n",
+    "        edges.extend(edges1)\n",
+    "    if (len(edges2) > 0):\n",
+    "        edges.extend(edges2)\n",
+    "\n",
+    "    # Preserve minimum distance\n",
+    "    if (distance1 < distance):\n",
+    "        distance = distance1\n",
+    "\n",
+    "    if (distance2 < distance):\n",
+    "        distance = distance2\n",
+    "\n",
+    "    # Preserve darkest color\n",
+    "    if (color1 == 'WHITE' and (color2 == 'GRAY' or color2 == 'BLACK')):\n",
+    "        color = color2\n",
+    "\n",
+    "    if (color1 == 'GRAY' and color2 == 'BLACK'):\n",
+    "        color = color2\n",
+    "\n",
+    "    if (color2 == 'WHITE' and (color1 == 'GRAY' or color1 == 'BLACK')):\n",
+    "        color = color1\n",
+    "\n",
+    "    if (color2 == 'GRAY' and color1 == 'BLACK'):\n",
+    "        color = color1\n",
+    "\n",
+    "    return (edges, distance, color)\n",
+    "    \n",
     "iterationRDD = createStartingRDD()    \n",
     "    \n",
     "for iteration in range(0, 10):\n",
-    "    print(\"Running BFS iteration# \" + str(iteration+1))\n",
+    "    print(\"Running BFS iteration #\" + str(iteration+1))\n",
     "    \n",
     "    # Create new vertices as needed to darken or reduce distances in the\n",
     "    # reduce stage. If we encounter the node we're looking for as a GRAY\n",
@@ -150,13 +198,29 @@
     "    print(\"Processing \" + str(mapped.count()) + \" values.\")\n",
     "    \n",
     "    if (hitCounter.value > 0):\n",
-    "        print(\"Hit the target character! From \" + str(hitCounter.value) \\\n",
-    "             + \"different direction(s)\")\n",
+    "        print(\"Hit the target superhero! From \" + str(hitCounter.value) + \" different direction(s)\")\n",
     "        break\n",
     "    \n",
-    "\n",
-    "pairingsBFS = lines.map(convertToBFS)"
+    "    # Reducer combines data for each superhero ID, preserving the darkest\n",
+    "    # color and shortest path.\n",
+    "    iterationRDD = mapped.reduceByKey(bfsReduce)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looks like Spiderman and Jinx are 2 degrees of seperation from each other through 2 different superheroes (directions)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
