Explaining recommender system

--- a/Movie recommender with Spark/Movie-Ratings.ipynb
+++ b/Movie recommender with Spark/Movie-Ratings.ipynb
@@ -1785,6 +1785,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Item-Based Collaborative Filtering\n",
+    "\n",
+    "We will be using item-based collaborative filtering in order to build a recommender system. I've already done this with Pandas in the following notebook: https://github.com/JayThibs/python-machine-learning-examples/blob/master/Item-Based-Collaborative-Filtering.ipynb\n",
+    "\n",
+    "However, this time I will make it a Spark problem in order to create a recommender system with Spark. Turning it into a Spark problem is much more complicated than if we simply used Pandas and correlation matrices, but Spark will allow us to use much bigger datasets so let's do it.\n",
+    "\n",
+    "Here's our strategy:\n",
+    "\n",
+    "1. Map input ratings to (userID, (movieID, rating))\n",
+    "2. Find every movie pair rated by the same user which gives something like (userID, ((movieID1, rating1), (movieID2, rating2)))\n",
+    "* This can be done with a self-join operation (SQL-like operation)\n",
+    "3. Filter out duplicate pairs\n",
+    "4. Make the movie pairs the key by mapping RDD like this ((movieID1, movieID2), (rating1, rating2))\n",
+    "5. Combine all the ratings that each individual made for a given pair of movies. We can do this by using groupByKey().\n",
+    "6. Compute similarity between ratings for each movie in the pair. There are many ways to compute similarity. We'll try 2 approaches to see which one works best.\n",
+    "7. We will sort the ratings from top rated to lowest rated films. We will finish by saving and "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
