Explaining recommender system

--- a/Movie recommender with Spark/Movie-Ratings.ipynb
+++ b/Movie recommender with Spark/Movie-Ratings.ipynb
@@ -1800,12 +1800,12 @@
     "\n",
     "1. Map input ratings to (userID, (movieID, rating))\n",
     "2. Find every movie pair rated by the same user which gives something like (userID, ((movieID1, rating1), (movieID2, rating2)))\n",
-    "* This can be done with a self-join operation (SQL-like operation)\n",
+    "* This can be done with a Self-Join operation (SQL-like operation). The Self-Join operation is computationally expensive, so it is important to cache the RDD before using an action on the RDD. This is because RDDs are discarded once you perform an action on them. Caching (or persisting) will keep the RDD around and avoid having to recompute the RDD.\n",
     "3. Filter out duplicate pairs\n",
     "4. Make the movie pairs the key by mapping RDD like this ((movieID1, movieID2), (rating1, rating2))\n",
     "5. Combine all the ratings that each individual made for a given pair of movies. We can do this by using groupByKey().\n",
     "6. Compute similarity between ratings for each movie in the pair. There are many ways to compute similarity. We'll try 2 approaches to see which one works best.\n",
-    "7. We will sort the ratings from top rated to lowest rated films. We will finish by saving and "
+    "7. We will sort the ratings from top rated to lowest rated films. We will finish by saving and displaying the results."
    ]
   },
   {
