Working on item-based recommender system

--- a/Movie recommender with Spark/Movie-Ratings.ipynb
+++ b/Movie recommender with Spark/Movie-Ratings.ipynb
@@ -1810,6 +1810,83 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Loading movie names...\n"
+     ]
+    }
+   ],
+   "source": [
+    "from math import sqrt\n",
+    "\n",
+    "def loadMovieNames():\n",
+    "    movieNames = {}\n",
+    "    with open(\"/Users/jacquesthibodeau/big-data-datasets/ml-100k/u.item\") as f:\n",
+    "        for line in f:\n",
+    "            fields = line.split('|')\n",
+    "            movieNames[int(fields[0])] = fields[1].decode('ascii', 'ignore')\n",
+    "    return movieNames\n",
+    "    \n",
+    "# Makes sure that we don't compare the same two movies twice by\n",
+    "# enforcing a certain ascending order through the filter\n",
+    "# and eliminates when the movies are the same\n",
+    "def filterDuplicates((userID, ratings)):\n",
+    "    (movie1, rating1) = ratings[0]\n",
+    "    (movie2, rating2) = ratings[1]\n",
+    "    return movie1 < movie2\n",
+    "    \n",
+    "def makePairs((user, ratings)):\n",
+    "    (movie1, rating1) = ratings[0]\n",
+    "    (movie2, rating2) = ratings[1]\n",
+    "    return ((movie1, movie2), (rating1, rating2))\n",
+    "\n",
+    "def computerCosineSimilarity(ratingPairs):\n",
+    "    numPairs = 0\n",
+    "    sum_xx = sum_yy = sum_xy = 0\n",
+    "    for ratingX, ratingY in ratingPairs:\n",
+    "        sum_xx += ratingX * ratingX\n",
+    "        sum_yy += ratingY * ratingY\n",
+    "        sum_xy += ratingX * ratingY\n",
+    "        numPairs += 1\n",
+    "        \n",
+    "    numerator = sum_xy\n",
+    "    denominator = sqrt(sum_xx) * sqrt(sum_yy)\n",
+    "    \n",
+    "    return\n",
+    "    \n",
+    "print(\"\\nLoading movie names...\")\n",
+    "nameDict = loadMovieNames()\n",
+    "\n",
+    "data = sc.textFile(\"/Users/jacquesthibodeau/big-data-datasets/ml-100k/u.data\")\n",
+    "\n",
+    "# Map ratings to key/value pairs: (userID, (movieID, rating))\n",
+    "ratings = data.map(lambda x: x.split()).map(lambda x: (int(x[0]), (int(x[1]), float(x[2]))))\n",
+    "\n",
+    "# We use a self-join operation to find every possible combination\n",
+    "# of movies that were rated together by the same user.\n",
+    "joinedRatings = ratings.join(ratings)\n",
+    "\n",
+    "# At this point our RDD consists of userID => ((movieID1, rating1), (movieID2, rating2))\n",
+    "\n",
+    "# Filter out duplicates\n",
+    "uniqueJoinedRatings = joinedRatings.filter(filterDuplicates)\n",
+    "\n",
+    "# We will now make the key/value into (movieID1, movieID2) / (rating1, rating2).\n",
+    "# We do this because it makes it easy to group all the ratings\n",
+    "# for each movie (each key)\n",
+    "moviePairs = uniqueJoinedRatings.map(makePairs)\n",
+    "\n",
+    "# We now hav"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
